syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "user/v1/rpc/user/create_user.proto";
import "user/v1/rpc/user/get_users.proto";
import "user/v1/rpc/user/get_user.proto";
import "user/v1/rpc/user/update_user.proto";
import "user/v1/rpc/user/update_user_activity.proto";
import "user/v1/rpc/user/update_user_role.proto";
import "user/v1/rpc/user/delete_user.proto";
import "user/v1/rpc/token/register_user.proto";
import "user/v1/rpc/token/login_user.proto";
import "user/v1/rpc/token/refresh_token.proto";


service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc UpdateUserActivity(UpdateUserActivityRequest) returns (UpdateUserActivityResponse);
  rpc UpdateUserRole(UpdateUserRoleRequest) returns (UpdateUserRoleResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

service TokenService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}